--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-fastapi>=0.104.1
-uvicorn>=0.24.0
-pydantic>=2.5.2
+fastapi==0.104.1
+uvicorn==0.24.0
+python-dotenv==1.0.0
+line-bot-sdk==3.7.0
+google-generativeai==0.3.2
+pydantic==2.5.2
